Add Player One Logic and Fix Id's

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <section>
-        <h1 id="score"><span id="p1score">0</span> to <span id="p2score">0</span></h1>
+        <h1 id="score"><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
 
-        <button id="p1point">+1 Player One</button>
-        <button id="p2point">+1 Player Two</button>
+        <button id="p1Button">+1 Player One</button>
+        <button id="p2Button">+1 Player Two</button>
         <button id="reset">Reset</button>
     </section>
 
