--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <section>
         <h1 id="score"><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
 
+        <select name="winningScore" id="winningScore">
+            <option value="3">3</option>
+            <option value="5">5</option>
+            <option value="7">7</option>
+            <option value="9">9</option>
+        </select>
         <button id="p1Button">+1 Player One</button>
         <button id="p2Button">+1 Player Two</button>
         <button id="reset">Reset</button>
