--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Score Keeper</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
 </head>
 <body>
-    <section>
-        <h1 id="score"><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
+    <section class="container">
+        <div class="columns">
+            <div class="column is-half is-offset-one-quarter">
+                <div class="card">
+                    <header class="card-header">
+                        <p class="card-header-title">Score Keeper</p>
+                    </header>
+                    <div class="card-content">
+                        <div class="content">
+                            <h1 id="score" class="title is-1"><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
+                        </div>
+                    </div>
+                    <footer class="card-footer">
+                        <a href="#" class="card-footer-item">Save</a>
+                        <a href="#" class="card-footer-item">Edit</a>
+                        <a href="#" class="card-footer-item">Delete</a>
+                    </footer>
+                </div>
+            </div>
+        </div>
+        
 
         <select name="winningScore" id="winningScore">
             <option value="3">3</option>
