--- a/index.html
+++ b/index.html
@@ -7,39 +7,39 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
 </head>
 <body>
-    <section class="container">
-        <div class="columns">
-            <div class="column is-half is-offset-one-quarter">
-                <div class="card">
-                    <header class="card-header">
-                        <p class="card-header-title">Score Keeper</p>
-                    </header>
-                    <div class="card-content">
-                        <div class="content">
-                            <h1 id="score" class="title is-1"><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
+    <section class="section">
+        <div class="container">
+            <div class="columns">
+                <div class="column is-half is-offset-one-quarter">
+                    <div class="card">
+                        <header class="card-header">
+                            <p class="card-header-title">Score Keeper</p>
+                        </header>
+                        <div class="card-content">
+                            <div class="content">
+                                <h1 id="score" class="title is-1"><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
+                                <p class="subtitle">Use the buttons below to keep score</p>
+                                <label for="winningScore" class="label is-large is-inline">Playing to: </label>
+                                <div class="select is-rounded">
+                                    <select name="winningScore" id="winningScore" class="select is-rounded">
+                                        <option value="3">3</option>
+                                        <option value="5">5</option>
+                                        <option value="7">7</option>
+                                        <option value="9">9</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
+                        <footer class="card-footer">
+                            <button id="p1Button" class="card-footer-item button is-primary is-medium">+1 Player One</button>
+                            <button id="p2Button" class="card-footer-item button is-info is-medium">+1 Player Two</button>
+                            <button id="reset" class="card-footer-item button is-danger is-medium">Reset</button>
+                        </footer>
                     </div>
-                    <footer class="card-footer">
-                        <a href="#" class="card-footer-item">Save</a>
-                        <a href="#" class="card-footer-item">Edit</a>
-                        <a href="#" class="card-footer-item">Delete</a>
-                    </footer>
                 </div>
             </div>
         </div>
-        
-
-        <select name="winningScore" id="winningScore">
-            <option value="3">3</option>
-            <option value="5">5</option>
-            <option value="7">7</option>
-            <option value="9">9</option>
-        </select>
-        <button id="p1Button">+1 Player One</button>
-        <button id="p2Button">+1 Player Two</button>
-        <button id="reset">Reset</button>
     </section>
-
     <script src="app.js"></script>
 </body>
 </html>
